tratto anche i files NEF e CR2, corretto il bug di conversione dtAcq con ZoneId del sistema